# src/controllers/product/delete_product.go
@@ -8,7 +8,6 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// todo delete product in a menu ?
 func DeleteProduct(c *gin.Context) {
 	idParam := c.Param("id")
 	id, err := strconv.Atoi(idParam)
